tests/programs/type-errors/impl_missing_method.rice
interface Bar {
  fn bloop(Self, int) -> int;
}

struct Foo(int);

impl Bar for Foo {}

fn main() { () }